[tool.poetry]
name = "urldecode"
version = "0.1.0"
description = "CLI tool to quickly decode URL encoded strings"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
license = "GPL-3-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
click-fish = "^0.1.0"
click-extra = "^4.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
